--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-instagram-embed": "^1.5.0",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "react-twitch-embed": "^2.1.0",
+    "twitch": "^4.2.7"
   },
   "scripts": {
     "start": "react-scripts start",
